--- a/CreateMkdTablefrombib.ipynb
+++ b/CreateMkdTablefrombib.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "id": "d22a57d1",
    "metadata": {},
    "outputs": [
@@ -60,8 +60,8 @@
     "    entries = bib_text.split('@')[1:]  # Skip the empty split before the first '@'\n",
     "    \n",
     "    # Prepare the markdown table header\n",
-    "    markdown_table = \"| Title | Journal | Year | Authors | DOI | Summary |\\n\"\n",
-    "    markdown_table += \"| --- | --- | --- | --- | --- | --- |\\n\"\n",
+    "    markdown_table = \"| Title | Journal | Year | Authors | DOI | Summary |\"\n",
+    "    markdown_table += \"| --- | --- | --- | --- | --- | --- |\"\n",
     "    \n",
     "    # Process each entry\n",
     "    for entry in entries:\n",
@@ -76,7 +76,7 @@
     "        title_link = f\"[{title}]({url})\" if url else title\n",
     "        \n",
     "        # Add the entry to the table\n",
-    "        markdown_table += f\"| {title_link} | {journal} | {year} | {authors} | {doi} |  |\\n\"\n",
+    "        markdown_table += f\"| {title_link} | {journal} | {year} | {authors} | {doi} |  |\"\n",
     "    \n",
     "    return markdown_table\n",
     "\n",
@@ -94,23 +94,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "id": "99e91557",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'| Title | Journal | Year | Authors | DOI | Summary |\\n| --- | --- | --- | --- | --- | --- |\\n| [Spatial and Temporal Variability of the Impacts of Pinyon and Juniper Reduction on Hydrologic and Erosion Processes Across Climatic Gradients in the Western US: A Regional Synthesis](http://www.mdpi.com/2073-4441/10/11/1607) | Water | 2018 | Williams, C. Jason, Snyder, Keirith A., Pierson, Frederick B. | 10.3390/w10111607 |  |\\n'"
+       "'| Title | Journal | Year | Authors | DOI | Summary || --- | --- | --- | --- | --- | --- || [Innovative approach to prognostic plant growth modeling in SWAT+\\xa0for forest and perennial vegetation in tropical and Sub-Tropical climates](https://www.sciencedirect.com/science/article/pii/S2589915523000093) | Journal of Hydrology X | 2023 | Abitew, Tadesse A., Arnold, Jeffrey, Jeong, Jaehak, Jones, Allan, Srinivasan, Raghavan | 10.1016/j.hydroa.2023.100156 |  |'"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "bib_file_path = \"C:/Users/rl587/Documents/GitHub/ATUR-WIKI/Literature/Recharge_Subteam/Williams2018.bib\"\n",
+    "bib_file_path = \"/Users/Fern/Documents/GitHub/ATUR-WIKI/Literature/Landscapes_Subteam/abitew_etal_2023.bib\"\n",
     "bib_to_markdown_table(bib_file_path)"
    ]
   }
@@ -131,7 +131,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.8.9"
   }
  },
  "nbformat": 4,
